<resources>
    <string name="app_name">CS2450-AndroidProject</string>
    <string name="start_bttn">Start</string>
    <string name="game_text">Concentration!</string>
    <string name="level_text">Select a level to begin!</string>
    <string name="level_description">game level</string>
    <string name="back_description">back bttn</string>
    <string name="score_box">Score: </string>
    <string name="try_again">Try Again!</string>
    <string name="quit">Quit</string>
    <string name="win_mssg">Congrats, you won!</string>
    <string name="home_button">Home</string>
    <string name="hs_Mssg">You had a score of:  </string>
    <string name="score_enter">Enter Name: \t </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>