<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <Button
        android:id="@+id/try_again"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:text="@string/try_again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_box2" />

    <Button
        android:id="@+id/quit_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/quit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/score_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/l4portrait"
        android:layout_width="fill_parent"
        android:layout_height="603dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/card_back"
                android:background="@color/transparent"/>

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/card_back"
                android:background="@color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/card_back"
                android:background="@color/transparent"/>

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/card_back"
                android:background="@color/transparent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>