<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <Button
        android:id="@+id/try_again6"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:text="@string/try_again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_lvl8" />

    <Button
        android:id="@+id/reset_lvl8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quit_lvl8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/quit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_lvl8" />

    <TextView
        android:id="@+id/score_lvl8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/score_box"
        android:textColor="#37474F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/l4portrait"
        android:layout_width="411dp"
        android:layout_height="589dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/try_again6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />


            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

            <com.android.cs2450_androidproject.CardButton
                android:id="@+id/i_card14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="three"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/card_back" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>